--- a/index.html
+++ b/index.html
@@ -1,9 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Shreya Singh</title>
+	<title>Hello world</title>
 </head>
 <body>
-<h1>Class 6</h1>
-</body>
+  <h1> Welland Gouldsmith school</h1>
+  <p> It is a christian school
+      It has very much disipline
+  It is built by Dr G.R Heart</p>
+  <ul>
+  	<li>It is a very good school</li>
+  	<li>It has a aurtitorium also</li>
+  	<li>It has many programn</li>
+  	<li>This school has 2 principle</li>
+  </ul>   
+ </body>
 </html>
