--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello world</title>
+	<title>Shreya Singh</title>
 </head>
 <body>
   <h1> Welland Gouldsmith school</h1>
